2002-08-31  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_scan_mime_part_content): Pass `content'
	into parser_scan_content(), fixes bug #92183.

2002-08-30  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version to 1.90.1

	* doc/Makefile.am: Don't gtkdoc-fixxref if the user disabled
	gtk-doc from the build.

2002-08-25  Jeffrey Stedfast  <fejj@ximian.com>

	* test-best.c: New test suite for the gmime-filter-best filter.

	* gmime.h.in: Added gmime-filter-best.h

	* gmime-filter-best.c (g_mime_filter_best_charset): Never return
	NULL, instead return us-ascii.
	(filter_filter): Fixed to not get into an infinite loop.

2002-08-23  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated.

	* gmime-message-part.c (message_part_write_to_stream): Changed the
	prototype to return ssize_t and not int.

2002-08-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-best.c: New filter for calculating the best charset
	and encoding for a stream.

	* gmime-iconv-utils.c (g_mime_iconv_locale_to_utf8): Make
	threadsafe.
	(g_mime_iconv_locale_to_utf8_length): Same.
	(g_mime_iconv_utf8_to_locale): Here too.
	(g_mime_iconv_utf8_to_locale_length): And here.

	* gmime.c (g_mime_init): Updated to call
	g_mime_charset_map_init().

	* gmime-charset.c (g_mime_charset_locale_name): Initialize the
	charset map if it hasn't already been initialized.
	(g_mime_charset_map_init): Renamed from g_mime_charset_init().
	(g_mime_charset_init): Renamed from charset_init() and also made
	it globally accessable.
	(g_mime_charset_step): New external function (was an internal
	function before).
	(g_mime_charset_best_name): Now an external function also.

2002-08-19  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_decrypt): Report better errors for when
	gpg fails to be executed.
	(gpg_encrypt): Same.
	(gpg_verify): Here too.
	(gpg_sign): And here.
	(gpg_ctx_op_start): Try stat()ing the gpg binary to make sure it