@@ -203,7 +203,7 @@ multipart_remove_header (GMimeObject *object, const char *header)
            doesn't belong on a multipart */
 	
 	if (!g_strncasecmp ("Content-", header, 8))
-		return GMIME_OBJECT_CLASS (parent_class)->remove_header (object, header);
+		GMIME_OBJECT_CLASS (parent_class)->remove_header (object, header);
 }
 
 static void
