@@ -1,3 +1,14 @@
+2002-09-01  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-message-part.c (message_part_remove_header): Same as
+	below.
+
+	* gmime-multipart.c (multipart_remove_header): Same as
+	gmime-part.c
+
+	* gmime-part.c (mime_part_remove_header): Don't return anything
+	here since our function is supposed to return void.
+
 2002-08-31  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime-parser.c (parser_scan_mime_part_content): Pass `content'
